ISSUE-52 Java 8 compilation fix